[project]
name = "r2gc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coca-pytorch>=0.1.0",
    "en-core-sci-scibert",
    "lion-pytorch>=0.2.3",
    "mamba-ssm>=2.2.4",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pycocoevalcap",
    "scikit-learn>=1.6.1",
    "scispacy>=0.5.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "spacy>=3.7.5",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "vit-pytorch>=1.9.1",
]

[tool.uv.sources]
en-core-sci-scibert = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_scibert-0.5.4.tar.gz" }
pycocoevalcap = { git = "https://github.com/salaniz/pycocoevalcap.git" }
